--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,38 +1,24 @@
 # ----------------------------------------------------------------------
-# Configuracion General de la Aplicacion
+# Configuracion General
 # ----------------------------------------------------------------------
-server.port=8081
 spring.application.name=taskflow-api
 
-# ----------------------------------------------------------------------
-# Configuracion de Logs (Opcional, util para ver mas detalles de SQL)
-# ----------------------------------------------------------------------
-# logging.level.org.hibernate.SQL=DEBUG
-# logging.level.org.hibernate.orm.jdbc.bind=TRACE
+# IMPORTANTE: Usar el puerto estándar 8080 dentro del contenedor.
+# Docker mapea el puerto externo 8081 al interno 8080.
+server.port=8080
 
 # ----------------------------------------------------------------------
-# Configuracion de la Base de Datos PostgreSQL (Usando Variables de Entorno)
+# Base de Datos
 # ----------------------------------------------------------------------
-# Aunque los valores de 'url', 'username' y 'password' se definen en docker-compose.yml
-# (que es la mejor práctica), los dejamos aquí como respaldo o para desarrollo local.
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/taskflow_db}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:taskflow_user}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:taskflow_pass}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ----------------------------------------------------------------------
-# Configuracion de Spring Data JPA y Hibernate
+# JPA / Hibernate
 # ----------------------------------------------------------------------
-# 'update' permite que Hibernate modifique el esquema de la DB para que coincida 
-# con las entidades Java. Esto es útil para desarrollo, pero se controla mejor 
-# desde docker-compose (donde tienes 'SPRING_JPA_HIBERNATE_DDL_AUTO: update').
 spring.jpa.hibernate.ddl-auto=update
-
-# Mostrar las sentencias SQL generadas por Hibernate en la consola
 spring.jpa.show-sql=true
-
-# Dialecto para PostgreSQL 10 y superior
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
-# Configuracion de la llave primaria: usar el nombre de la columna en la BD
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
