--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,45 +1,53 @@
-version: '3.9'
+version: '3.8'
 
 services:
+  # ----------------------------------------------------
+  # 1. Database Service (PostgreSQL)
+  # ----------------------------------------------------
   db:
-    image: postgres:15 # Imagen de PostgreSQL
+    image: postgres:15-alpine
     container_name: taskflow_db
-    restart: always
     environment:
+      POSTGRES_DB: taskflow_db
       POSTGRES_USER: taskflow_user
       POSTGRES_PASSWORD: taskflow_pass
-      POSTGRES_DB: taskflow_db
     ports:
       - "5432:5432"
     volumes:
-      - ./schema.sql:/docker-entrypoint-initdb.d/schema.sql # Mapea tu script SQL
+      # Persist data so it doesn't vanish on restart
       - postgres_data:/var/lib/postgresql/data
+      # Run your schema.sql when the container is first created
+      - ./schema.sql:/docker-entrypoint-initdb.d/init.sql
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U taskflow_user -d taskflow_db"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
-  adminer:
-    image: adminer # Imagen de Adminer (interfaz web de DB)
-    container_name: taskflow_adminer
-    restart: always
-    ports:
-      - "8080:8080"
-    depends_on:
-      - db # Asegura que la base de datos se levante antes que Adminer
-
-  api:
+  # ----------------------------------------------------
+  # 2. API Service (Spring Boot)
+  # ----------------------------------------------------
+  app:
     build:
-      context: ../ # El contexto es la carpeta raíz del proyecto (taskflow-api)
-      dockerfile: ./docker/Dockerfile # Ubicación de tu Dockerfile
+      context: ../
+      dockerfile: docker/Dockerfile
     container_name: taskflow_api
     ports:
-      - "8081:8081" # Exposición del puerto de Spring Boot
+      # Host Port 8081 -> Container Port 8080
+      - "8081:8080"
     environment:
-      # Conexión a la base de datos (IMPORTANTE: usa 'db' como HOST)
       SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/taskflow_db
       SPRING_DATASOURCE_USERNAME: taskflow_user
       SPRING_DATASOURCE_PASSWORD: taskflow_pass
-      # Configuración de JPA para crear/actualizar tablas
-      SPRING_JPA_HIBERNATE_DDL_AUTO: update 
+      # 'update' is risky for prod, but okay for dev. 
+      # Since we mount schema.sql, 'validate' or 'none' is safer, 
+      # but 'update' helps if you change entities without updating SQL.
+      SPRING_JPA_HIBERNATE_DDL_AUTO: update
     depends_on:
-      - db # Asegura que la DB esté lista antes de iniciar la API
+      db:
+        condition: service_healthy
+    networks:
+      - default
 
 volumes:
   postgres_data:
